# type-generation

./: Adt-Generation.opam  README.org
doc/: language.ebnf
src/: dune  generation.ml
src/lib/: dune  parser.ml  types.ml
test/: parsing.ml
