opam-version: "2.0"
name: "Adt-Generation"
version: "~dev"
synopsis: "ADT generator for many languages"
maintainer: "mariari <mariari@protonmail.com>"
authors: "mariari <mariari@protonmail.com>"
license: "MIT"

homepage: "https://github.com/mariari/type-generation"
bug-reports: "https://github.com/mariari/type-generation/issues"
dev-repo: "git+https://github.com/mariari/type-generation.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "core"
  "angstrom"
]

